# wall_garden

./: .env.example  .gitignore  AGENTS.md  Procfile.dev  README.md  docker-compose.yml
daemon/: .dockerignore  Dockerfile  pyproject.toml  requirements-pi.txt
daemon/config/: hardware.yml
daemon/scripts/: soak_runner.py
daemon/tests/: conftest.py  fakes.py  test_control_loop.py  test_decide_watering.py  test_photographer.py  test_safety.py  test_simulator_physics.py  test_soil.py
daemon/wallgardend/: command_runner.py  config.py  control_loop.py  db.py  main.py  photographer.py  safety.py  soil.py  watchdog.py
daemon/wallgardend/hardware/: backend.py  factory.py  pi.py  simulator.py
deploy/: install.sh
deploy/logrotate/: wallgarden
deploy/nginx/: wallgarden.conf
deploy/systemd/: wallgarden-jobs.service  wallgarden-web.service  wallgardend.service
docs/: ARCHITECTURE.md  CALIBRATION.md  HARDWARE.md  RUNBOOK.md  SIMULATOR.md
shared/: README.md  schema.sql
web/: .dockerignore  Dockerfile  Gemfile  Procfile.dev  config.ru
web/app/ai/: authentication_error.rb  client.rb  error.rb  image_preparer.rb  rate_limit_error.rb  timeout_error.rb  unreachable_error.rb  vision_client.rb
web/app/controllers/: alerts_controller.rb  application_controller.rb  chats_controller.rb  dashboard_controller.rb  photos_controller.rb  plant_profiles_controller.rb  zones_controller.rb
web/config/: application.rb  database.yml  deploy.yml  importmap.rb  puma.rb  routes.rb
web/db/: schema.rb  schema.rb.bak  seeds.rb
web/spec/: rails_helper.rb  spec_helper.rb
(+94 files in other folders)
